...
                                                                                 ObjectNames.TaskObjects.taskFormView,
                                                                                 viewModel.selectedTask)
                updateTaskView
            }
            .alert("Are you sure?", isPresented: $viewModel.showDeleteConfirmation) {
                Button("Cancel", role: .cancel) { }
                Button("Delete", role: .destructive) { viewModel.deleteTask() }
            } message: {
                Text("Tapping Delete will remove the task permanently.")
            }
        }
        .padding(.vertical)
    }
...
                    items.move(fromOffsets: IndexSet, toOffset: destination)
                }
                .listRowSeparator(.hidden)
                .environment(\.defaultMinListRowHeight, 100)
            }
            .listStyle(.plain)
            .accessibilityIdentifier("task row")
        }
    }
    
    @ViewBuilder
    private func createButtons(task: TaskDataModel, buttons: [(buttonType: SwipeActionType, buttonAction: () -> Void)]?) -> some View {
        if let buttons = buttons {
...
